# cli-hangman

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  about.hbs  about.toml  build.rs  clippy.toml  license.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: rust.yml
examples/data/: lexicon.json  lexicon.ron  lexicon.toml
resources/templates/: README.tera
src/: command.rs  commands.rs  configuration.rs  constants.rs  core.rs  cryptography.rs  gallows.rs  input.rs  lexicon.rs  logger.rs  main.rs  settings.rs  state.rs  stylizer.rs  terminal.rs
src/data/: constants.ron  gallows.ron
